crates/oxc_react_compiler/tests/snapshots/error.invalid-closure-escapes-before-callback-reassignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-closure-escapes-before-callback-reassignment.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "This value cannot be modified", labels: [LabeledSpan { label: Some("`cb` cannot be modified"), span: Span { start: 128, end: 130 }, primary: true }, LabeledSpan { label: Some("`cb` originates here"), span: Span { start: 80, end: 82 }, primary: false }], help: Some("Modifying a value used previously in an effect function or as an effect dependency is not allowed. Consider moving the modification before calling useEffect()"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Error, code: OxcCode { scope: Some("react-compiler"), number: Some("Immutability") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/immutability") } }

No changes.
